# nur

./: Cargo.toml  ReadMe.md  deny.toml  nur.yml
.devcontainer/: Dockerfile  devcontainer.json  install.sh
.github/workflows/: release.yml
exe/: Cargo.toml
exe/src/: main.rs
exe/src/commands/: init.rs
lib/: Cargo.toml
lib/src/: commands.rs  lib.rs  nurfile.rs  nurfile_kdl.rs  nurfile_yaml.rs  output.rs  version.rs
lib/src/commands/: check.rs  init.rs  list.rs  mod.rs  task.rs
lib/src/nurfile/: kdl.rs  mod.rs  yaml.rs
lib/src/output/: grouped.rs  mod.rs  sink.rs  streamed.rs
lib/tests/: golden_test.rs
lib/tests/goldenfiles/: dependencies.txt  dependencies.yml  dependency-failure.txt  dependency-failure.yml  env.txt  env.yml  exit_code.txt  exit_code.yml  extended-cycle.txt  extended-cycle.yml  hello_world.txt  hello_world.yml  no_version.txt  no_version.yml  output_deterministic.txt  output_deterministic.yml  self-cycle.txt  self-cycle.yml  variations.txt  variations.yml
lib/tests/snapshots/: golden_test__check@dependencies.yml.snap  golden_test__check@dependency-failure.yml.snap  golden_test__check@env.yml.snap  golden_test__check@exit_code.yml.snap  golden_test__check@extended-cycle.yml.snap  golden_test__check@hello_world.yml.snap  golden_test__check@multiple_failures.yml.snap  golden_test__check@no_version.yml.snap  golden_test__check@output_deterministic.yml.snap  golden_test__check@self-cycle.yml.snap  golden_test__check@variations.yml.snap
lib/tests/test_inputs/: exit_code.yml  multiple_failures.yml  variations.yml
