[package]
name = "nur"
version = "0.0.1"
edition = "2021"
authors = [ "George Pollard <porges@porg.es>" ]
license = "GPL-3.0"
readme = "../README.md"
repository = "https://github.com/Porges/nur"
categories = ["development-tools::build-utils"]

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
miette = { version = "4.7.1", features = ["fancy-no-backtrace"] }
nu-command = { version = "0.68", optional = true }
nu-engine = { version = "0.68", optional = true }
nu-parser = { version = "0.68", optional = true }
nur-lib = { path="../lib" }
serde_yaml = "0.8.26"
tokio = { version = "1.21.1", features = ["rt", "macros"] }

[features]
default = []
nu = ["dep:nu-command","dep:nu-engine","dep:nu-parser"]
