[package]
name = "nur"
version = "0.0.1"
edition = "2021"
authors = [ "George Pollard <porges@porg.es>" ]
license = "GPL-3.0"
readme = "../README.md"
repository = "https://github.com/Porges/nur"
categories = ["development-tools::build-utils"]

[dependencies]
clap = { version = "4", features = ["derive"] }
miette = { version = "5.10", features = ["fancy-no-backtrace"] }
nur-lib = { path="../lib" }
serde_yaml = "0.9"
