[package]
name = "nur-lib"
version = "0.0.1"
edition = "2021"
authors = [ "George Pollard <porges@porg.es>" ]
license = "GPL-3.0"
repository = "https://github.com/Porges/nur"

[features]
default = ["yaml"]
kdl = ["dep:knuffel"]
yaml = ["dep:serde", "dep:serde_yaml"]
nu = ["dep:nu-engine", "dep:nu-parser"]

[dependencies]
async-trait = "0.1.57"
command-group = { version= "2", features = ["with-tokio"] }
futures = "0.3.24"
knuffel = { version = "2.0.0", optional = true }
miette = { version = "5.5", features = [] }
nu-ansi-term = "0.49"
nu-engine = { version = "0.84", optional = true } 
nu-parser = { version = "0.84", optional = true }
nu-protocol = { version = "0.84", optional = true }
nu-table = "0.84"
petgraph = { version = "0.6.2", features = ["graphmap"] }
question = "0.2.2"
rustworkx-core = "0.13.0"
serde = { version = "1.0.144", optional = true }
serde_with = "3.1"
serde_yaml = { version = "0.9", optional = true }
tabled = "0.14"
terminal_size = "0.2.1"
thiserror = "1.0.35"
tokio = { version = "1.23.1", features = ["process", "io-util", "io-std", "sync", "fs", "macros"] }
tokio-util = "0.7.4"
void = "1.0.2"

[dev-dependencies]
insta = { version = "1.31", features = ["glob", "filters"] }
tokio = { version = "1.23.1", features = ["rt"] }
