[package]
name = "nur-lib"
version = "0.0.1"
edition = "2021"
authors = [ "George Pollard <porges@porg.es>" ]
license = "GPL-3.0"
repository = "https://github.com/Porges/nur"

[features]
default = ["yaml"]
kdl = ["dep:kdl"]
yaml = ["dep:serde", "dep:serde_yaml"]

[dependencies]
futures = "0.3.24"
kdl = { version = "4.6.0", optional = true }
miette = { version = "7.2.0", features = [] }
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
petgraph = { version = "0.6.5", features = ["graphmap"] }
question = "0.2.2"
rustworkx-core = "0.15.1"
serde = { version = "1.0.144", optional = true, features = ["derive"] }
serde_with = "3.9"
serde_yaml = { version = "0.9", optional = true }
textwrap = { version = "0.16.1", features = ["terminal_size"] }
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = ["process"] }
tokio-util = "0.7.11"

[target.'cfg(windows)'.dependencies]
process-wrap = { version = "8.0.2", features = ["tokio1", "job-object"] }

[target.'cfg(unix)'.dependencies]
process-wrap = { version= "8.0.2", features = ["tokio1", "process-group"] }

[dev-dependencies]
insta = { version = "1.39", features = ["glob", "filters"] }
tokio = { version = "1.38.1", features = ["rt"] }
